--- a/feeds.conf
+++ b/feeds.conf
@@ -1,8 +1,9 @@
-src-git-full packages https://github.com/Entware/entware-packages.git
-src-git-full routing https://github.com/Entware/entware-routing.git
-src-git-full telephony https://github.com/Entware/entware-telephony.git
-src-git-full oldports https://github.com/Entware/entware-oldpackages-ports.git
-src-git-full rtndev https://github.com/Entware/rtndev.git
-src-git-full golang https://github.com/Entware/entware-go.git
+#src-git-full packages https://github.com/Entware/entware-packages.git
+#src-git-full routing https://github.com/Entware/entware-routing.git
+#src-git-full telephony https://github.com/Entware/entware-telephony.git
+#src-git-full oldports https://github.com/Entware/entware-oldpackages-ports.git
+#src-git-full rtndev https://github.com/Entware/rtndev.git
+#src-git-full golang https://github.com/Entware/entware-go.git
 #src-git-full graveyard https://github.com/Entware/graveyard.git
 #src-git-full dvb https://github.com/Entware/entware-dvb.git
+src-git-full packages https://github.com/zcmhi/entware-packages.git
